--- a/app/views/register.pug
+++ b/app/views/register.pug
@@ -1,6 +1,29 @@
-html
-  head
-      title= title
-  body 
-        h1 welcome
-        p= message
+html 
+    head  
+        title My app 
+        link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css")
+
+    body.container
+        h2 REGISTER
+        p  Please register.
+        hr
+        form(method="POST").form-group
+            label(for="Name") Name 
+            input(type="text" name="Name" placeholder="Name")#Name.form-control
+            label(for="Email") Email
+            input(type="text" name="Email" placeholder="Email")#Email.form-control
+            label(for="Address") Address 
+            input(type="text" name="Address" placeholder="Address")#Address.form-control
+            label(for="Username") Username
+            input(type="text" name="Username" placeholder="Username")#Username.form-control
+            label(for="password") Password 
+            input(type="password" name="password" placeholder="Password")#password.form-control
+           
+            hr
+            input(type="submit" value="Register").btn.btn-success
+
+        p Already registered?
+        a(href="/home/login")  LOGIN  
+           
+          
+    
